--- a/APP2/index.html
+++ b/APP2/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Curso Flexbox</title>
+    <title>Twitter</title>
 </head>
 <body>
-    <div id="app">
-        <div class="box red"></div>
-        <div class="box green"></div>
-        <div class="box blue"></div>
-    </div>    
 </body>
 </html>
