--- a/APP2/index.html
+++ b/APP2/index.html
@@ -7,5 +7,21 @@
     <title>Twitter</title>
 </head>
 <body>
+    <header id="main-header">
+        <nav>
+            <ul>
+                <li><img src="/APP2/images/home.svg" alt="Home"> Home</li>
+                <li><img src="/APP2/images/bell.svg" alt="Notificação"> Notification</li>
+                <li><img src="/APP2/images/mail.svg" alt="Mensagem"> Messages</li>
+            </ul>
+        </nav>
+        <img src="/APP2/images/twitter.svg" alt="Logo Twitter">
+        <div class="side">
+            <input type="text" placeholder="sarch on twitter">
+            <img src="/APP2/images/user.svg" alt="Avatar">
+            <button>Tweet</button>
+        </div>
+        
+    </header>
 </body>
 </html>
