--- a/APP2/index.html
+++ b/APP2/index.html
@@ -22,10 +22,10 @@
                 <img src="/APP2/images/user.svg" alt="Avatar">
                 <button>Tweet</button>
             </div>
-
-        </div>
-        
-        
+        </div>  
     </header>
+    <div class="banner">
+        <h1>Hello!</h1>
+    </div>
 </body>
 </html>
