--- a/APP2/index.html
+++ b/APP2/index.html
@@ -27,5 +27,38 @@
     <div class="banner">
         <h1>Hello!</h1>
     </div>
+    <div class="bar">
+        <div class="content">
+            <ul>
+                <li class="active">
+                    <span>Tweets</span>
+                    <strong>12345</strong>
+                </li>
+                <li>
+                    <span>Followings</span>
+                    <strong>12345</strong>
+                </li>
+                <li>
+                    <span>Tweets</span>
+                    <strong>12345</strong>
+                </li>
+                <li>
+                    <span>Followers</span>
+                    <strong>12345</strong>
+                </li>
+                <li>
+                    <span>Favorites</span>
+                    <strong>12345</strong>
+                </li>
+            </ul>
+            <div class="actions">
+                <button>Follow</button>
+                <img src="/APP2/images/more.svg" alt="Mais">
+            </div>
+
+        </div>
+        
+    </div>
+    
 </body>
 </html>
